<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movies"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/movies" />
    <item
        android:id="@+id/navigation_tv"
        android:icon="@android:drawable/ic_menu_week"
        android:title="@string/tv_series" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/favorites_title" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings" />
</menu>
